# photosi-exceptions-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: basic_usage.rs
src/: code.rs  errors.rs  level.rs  lib.rs  response.rs
tests/: integration_tests.rs
