[package]
name = "photosi-exceptions-rust"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Nicolini <anicolini@photosi.com>"]
description = "Shared exception types for Photosi Rust services"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
