[package]
name = "photosi-exceptions-rust"
version = "0.1.1"
edition = "2021"
authors = ["Andrea Nicolini <anicolini@photosi.com>"]
description = "Shared exception types for Photosi Rust services"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
